# teleinsight

./: .dockerignore  Dockerfile  Dockerfile.embedder  Dockerfile.ingestor  README.md  config.py  docker-compose.yaml  pyproject.toml  requirements.txt
cloud_functions/: db.py  index.py  requirements.txt
cloud_functions/visioneer/: main.py  requirements.txt
cloud_functions/visioneer/tools/: config.py  db.py  kafka.py  openai.py  storage.py
drafts/: clip-get-embedding.ipynb  clip-usage.ipynb  get_session_string.py
drafts/examples/: channel_message.json  chat_message.json  user_message.json
embedder/: clip.py  config.py  main.py  requirements.txt  storage.py
ingestor/: config.py  new_messages_handler.py  old_messages_handler.py  requirements.txt
ingestor/db/: handler.py
ingestor/storage/: objects.py
ingestor/utils/: events.py  meta.py
web/: index.html  script.js  styles.css
web/api/: main.py
